@@ -23,10 +23,11 @@ import java.util.Map;
 import java.util.Map.Entry;
 
 import org.apache.commons.io.IOUtils;
-import org.roda.core.data.common.RodaConstants;
 import org.roda.core.data.exceptions.GenericException;
 import org.roda.core.data.v2.ip.metadata.DescriptiveMetadata;
 import org.roda.core.data.v2.ip.metadata.DescriptiveMetadataMixIn;
+import org.roda.core.data.v2.ip.metadata.TechnicalMetadata;
+import org.roda.core.data.v2.ip.metadata.TechnicalMetadataMixIn;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -41,6 +42,7 @@ import com.fasterxml.jackson.databind.type.TypeFactory;
 public final class JsonUtils {
   private static final Logger LOGGER = LoggerFactory.getLogger(JsonUtils.class);
   private static final String JSON_ERROR_MESSAGE = "Error while parsing JSON";
+  private static final String ERROR_TRANSFORMING_OBJECT_TO_JSON_STRING = "Error transforming object '{}' to json string";
 
   private JsonUtils() {
     // do nothing
@@ -93,10 +95,10 @@ public final class JsonUtils {
     String ret = null;
     try {
       ObjectMapper mapper = new ObjectMapper(new JsonFactory());
-      mapper = addMixinsToMapper(mapper, object, mixin);
+      addMixinsToMapper(mapper, object, mixin);
       ret = mapper.writeValueAsString(object);
     } catch (IOException e) {
-      LOGGER.error("Error transforming object '{}' to json string", object, e);
+      LOGGER.error(ERROR_TRANSFORMING_OBJECT_TO_JSON_STRING, object, e);
     }
     return ret;
   }
@@ -113,17 +115,16 @@ public final class JsonUtils {
         mapper.setSerializationInclusion(JsonInclude.Include.NON_EMPTY);
         ret.append(mapper.writer().writeValueAsString(object));
       } catch (IOException e) {
-        LOGGER.error("Error transforming object '{}' to json string", object, e);
+        LOGGER.error(ERROR_TRANSFORMING_OBJECT_TO_JSON_STRING, object, e);
       }
     }
     return ret.toString();
   }
 
-  private static ObjectMapper addMixinsToMapper(ObjectMapper mapper, Object object, Class<?> mixin) {
+  private static void addMixinsToMapper(ObjectMapper mapper, Object object, Class<?> mixin) {
     if (!(object instanceof DescriptiveMetadata)) {
-      if (object instanceof List<?>) {
-        List<?> objectList = (List<?>) object;
-        if (!objectList.isEmpty() && !(objectList.get(0) instanceof DescriptiveMetadata)) {
+      if (object instanceof List<?> objectList) {
+        if (!objectList.isEmpty() && !(objectList.getFirst() instanceof DescriptiveMetadata)) {
           mapper.addMixIn(DescriptiveMetadata.class, DescriptiveMetadataMixIn.class);
         }
       } else {
@@ -131,11 +132,19 @@ public final class JsonUtils {
       }
     }
 
+    if (!(object instanceof TechnicalMetadata)) {
+      if (object instanceof List<?> objectList) {
+        if (!objectList.isEmpty() && !(objectList.getFirst() instanceof TechnicalMetadata)) {
+          mapper.addMixIn(TechnicalMetadata.class, TechnicalMetadataMixIn.class);
+        }
+      } else {
+        mapper.addMixIn(TechnicalMetadata.class, TechnicalMetadataMixIn.class);
+      }
+    }
+
     if (mixin != null) {
       mapper.addMixIn(object.getClass(), mixin);
     }
-
-    return mapper;
   }
 
   public static <T> T getObjectFromJson(Path json, Class<T> objectClass) throws GenericException {
@@ -143,7 +152,7 @@ public final class JsonUtils {
     InputStream stream = null;
     try {
       stream = Files.newInputStream(json);
-      String jsonString = IOUtils.toString(stream, RodaConstants.DEFAULT_ENCODING);
+      String jsonString = IOUtils.toString(stream, StandardCharsets.UTF_8);
       ret = getObjectFromJson(jsonString, objectClass);
     } catch (IOException e) {
       throw new GenericException(JSON_ERROR_MESSAGE, e);
@@ -156,7 +165,7 @@ public final class JsonUtils {
   public static <T> T getObjectFromJson(InputStream json, Class<T> objectClass) throws GenericException {
     T ret;
     try {
-      String jsonString = IOUtils.toString(json, RodaConstants.DEFAULT_ENCODING);
+      String jsonString = IOUtils.toString(json, StandardCharsets.UTF_8);
       ret = getObjectFromJson(jsonString, objectClass);
     } catch (IOException e) {
       throw new GenericException(e);
@@ -226,7 +235,7 @@ public final class JsonUtils {
       ObjectMapper mapper = new ObjectMapper(new JsonFactory());
       ret = mapper.writeValueAsString(node);
     } catch (IOException e) {
-      LOGGER.error("Error transforming object '{}' to json string", node, e);
+      LOGGER.error(ERROR_TRANSFORMING_OBJECT_TO_JSON_STRING, node, e);
     }
     return ret;
   }
@@ -260,8 +269,8 @@ public final class JsonUtils {
 
       // make it easy for the optimizer to tune this loop
       while (readChars == 1024) {
-        for (int i = 0; i < 1024;) {
-          if (c[i++] == '\n') {
+        for (int i = 0; i < 1024; i++) {
+          if (c[i] == '\n') {
             ++res;
           }
         }
