@@ -29,7 +29,7 @@ import org.roda.core.data.utils.XMLUtils;
 import org.roda.core.data.v2.ip.IndexedAIP;
 import org.roda.core.data.v2.ip.IndexedRepresentation;
 import org.roda.core.data.v2.user.User;
-import org.roda.wui.client.browse.MetadataValue;
+import org.roda.core.data.v2.generics.MetadataValue;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xml.sax.InputSource;
@@ -65,11 +65,11 @@ public class ServerTools {
       String[] localeArgs = localeString.split("_");
 
       if (localeArgs.length == 1) {
-        locale = new Locale(localeArgs[0]);
+        locale = Locale.of(localeArgs[0]);
       } else if (localeArgs.length == 2) {
-        locale = new Locale(localeArgs[0], localeArgs[1]);
+        locale = Locale.of(localeArgs[0], localeArgs[1]);
       } else if (localeArgs.length == 3) {
-        locale = new Locale(localeArgs[0], localeArgs[1], localeArgs[2]);
+        locale = Locale.of(localeArgs[0], localeArgs[1], localeArgs[2]);
       }
     } else {
       locale = Locale.ENGLISH;
